--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.jpg" class="logo">
+                <img src="logo.jpg" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -26,7 +26,7 @@
     
                 <h1>Hi, I'm <span>Muskan</span><br>Fathima.</h1><br>
                 <p>Web Developer.</p>
-                <a href="images/Muskanfathima.pdf" download class="btn btn2">Download CV</a>
+                <a href="Muskanfathima.pdf" download class="btn btn2">Download CV</a>
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.jpeg">
+                    <img src="user.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -65,10 +65,10 @@
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><a href="images/Muskan (JSD).pdf"><span>"Junior Software Developer" - Java.</span></a><br>Rooman Technologies | Duration: 4 Months</li>
-                                <li><a href="images/software_engineer_intern certificate.pdf"><span>"Software Engineer Intern".</span></a><br>Hacker Rank Assessment.</li>
-                                <li><a href="images/C Certificate.pdf"><span>"Online C test".</span></a><br>conducted by the spoken tutorial project IIIT Bombay.</li>
-                                <li><a href="images/HTML Certificate.pdf"><span>"Online HTML test"</span></a><br>conducted by the spoken tutorial project IIIT Bombay.</li>
+                                <li><a href="Muskan (JSD).pdf"><span>"Junior Software Developer" - Java.</span></a><br>Rooman Technologies | Duration: 4 Months</li>
+                                <li><a href="software_engineer_intern certificate.pdf"><span>"Software Engineer Intern".</span></a><br>Hacker Rank Assessment.</li>
+                                <li><a href="C Certificate.pdf"><span>"Online C test".</span></a><br>conducted by the spoken tutorial project IIIT Bombay.</li>
+                                <li><a href="HTML Certificate.pdf"><span>"Online HTML test"</span></a><br>conducted by the spoken tutorial project IIIT Bombay.</li>
             
                             </ul>
                         </div>
@@ -119,21 +119,21 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work1.jpg">
+                <img src="work1.jpg">
                 <div class="layer">
                     <h3>EDUVISTA1.0-"The Future Way of Learning" (ARVR).</h3>
                     <p>Developed an interactive web application enabling users to seamlessly access 3D models and immersive virtual and augmented environments.</p>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work2.jpg">
+                <img src="work2.jpg">
                 <div class="layer">
                     <h3>Student DataBase Management.</h3>
                     <p>Developed a comprehensive Student Database Management System using Python as the backend and XAMPP server. </p>
                 </div>
             </div> 
             <div class="work">
-                <img src="images/work3.jpg">
+                <img src="work3.jpg">
                 <div class="layer">
                     <h3>Fitness App</h3>
                     <p>Developed Android App.</p>
@@ -156,7 +156,7 @@
                 <a href="https://www.hackerrank.com/profile/muskanfathima202"><i class="fa-brands fa-hackerrank"></i></a>
             </div>
         </div>
-        <a href="images/Muskanfathima.pdf" download class="btn btn2">Download CV</a>
+        <a href="Muskanfathima.pdf" download class="btn btn2">Download CV</a>
     </div>
     <div class="copy-right">
         <p>Copyright@Muskan. </p>
