--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <h1>Hi, I'm <span>Muskan</span><br>Fathima.</h1><br>
-                <p>Web Developer.</p>
+                <p>Full Stack Developer.</p>
                 <a href="Muskanfathima.pdf" download class="btn btn2">Download CV</a>
             </div>
         </div>
@@ -38,7 +38,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>As a graduate in Computer Science, I have gained proficiency in languages like Java, Python, and C. Additionally, I have expertise in front-end tools such as HTML and CSS, and I am ready to contribute my problem-solving abilities to projects within the dynamic field of computer science. I am eager to apply my skills and knowledge in a practical setting to contribute to the growth and success of an innovative organization.</p>
+                    <p>I am Muskan Fathima, an aspiring software engineer based in Bangalore, India, with a Bachelor's degree in Computer Science Engineering from ACS College of Engineering. My education, combined with internships, has equipped me with skills in Java, Spring Boot, React, and more.
+During my tenure as a Research Analyst and Development Intern at Cattain International Services, a startup in Bangalore, I directed the development and deployment of the Enabler Tool Application. This role primarily involved backend development using Java Spring Boot, where I developed an application to fetch and display employee data based on specific filters and hierarchy levels. At Techno Fly Solutions, I gained insights into AI and industry trends as an AI Intern.
+I have worked on projects like the Enabler Tool Application, which integrates Power BI visuals, and EDUVISTA1.0, an interactive web app for accessing 3D models and immersive environments. My technical skills include Java, HTML, CSS, JavaScript, SQL, and frameworks like React and Spring Boot.
+Certified as a Junior Software Developer, I have completed Core Java courses and challenges. I excel in communication, project management, teamwork, and problem-solving. As a frequent user of ChatGPT, I proudly include 'ChatGPT Prompter' in my headline.
+I am passionate about software development and eager to contribute to innovative projects.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('exp')">Education</p>
