--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I am Muskan Fathima, an aspiring software engineer based in Bangalore, India, with a Bachelor's degree in Computer Science Engineering from ACS College of Engineering. My education, combined with internships, has equipped me with skills in Java, Spring Boot, React, and more.
-During my tenure as a Research Analyst and Development Intern at Cattain International Services, a startup in Bangalore, I directed the development and deployment of the Enabler Tool Application. This role primarily involved backend development using Java Spring Boot, where I developed an application to fetch and display employee data based on specific filters and hierarchy levels. At Techno Fly Solutions, I gained insights into AI and industry trends as an AI Intern.
-I have worked on projects like the Enabler Tool Application, which integrates Power BI visuals, and EDUVISTA1.0, an interactive web app for accessing 3D models and immersive environments. My technical skills include Java, HTML, CSS, JavaScript, SQL, and frameworks like React and Spring Boot.
-Certified as a Junior Software Developer, I have completed Core Java courses and challenges. I excel in communication, project management, teamwork, and problem-solving. As a frequent user of ChatGPT, I proudly include 'ChatGPT Prompter' in my headline.
-I am passionate about software development and eager to contribute to innovative projects.</p>
+                    <p>Here’s a shorter version of your intro:
+
+---
+
+I am Muskan Fathima, an aspiring software engineer from Bangalore with a Bachelor's degree in Computer Science Engineering from ACS College of Engineering. My experience includes backend development using Java Spring Boot at Cattain International Services and gaining AI insights at Techno Fly Solutions. I've worked on projects like the Enabler Tool Application, which integrates Power BI, and EDUVISTA1.0, an interactive AR/VR web app. 
+
+Skilled in Java, Spring Boot, React, HTML, CSS, JavaScript, and SQL, I am also certified as a Junior Software Developer. I excel in communication, project management, teamwork, and problem-solving. Proudly a 'ChatGPT Prompter,' I am passionate about contributing to innovative software projects.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('exp')">Education</p>
