--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Here’s a shorter version of your intro:
-
----
-
-I am Muskan Fathima, an aspiring software engineer from Bangalore with a Bachelor's degree in Computer Science Engineering from ACS College of Engineering. My experience includes backend development using Java Spring Boot at Cattain International Services and gaining AI insights at Techno Fly Solutions. I've worked on projects like the Enabler Tool Application, which integrates Power BI, and EDUVISTA1.0, an interactive AR/VR web app. 
-
+                    <p>I am Muskan Fathima, an aspiring software engineer from Bangalore with a Bachelor's degree in Computer Science Engineering from ACS College of Engineering. My experience includes backend development using Java Spring Boot at Cattain International Services and gaining AI insights at Techno Fly Solutions. I've worked on projects like the Enabler Tool Application, which integrates Power BI, and EDUVISTA1.0, an interactive AR/VR web app. 
+<br>
 Skilled in Java, Spring Boot, React, HTML, CSS, JavaScript, and SQL, I am also certified as a Junior Software Developer. I excel in communication, project management, teamwork, and problem-solving. Proudly a 'ChatGPT Prompter,' I am passionate about contributing to innovative software projects.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
