--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header-text">
                 <h1>Hi, I'm <span>Muskan</span><br>Fathima.</h1><br>
                 <p>Full Stack Developer.</p>
-                <a href="Muskanfathima.pdf" download class="btn btn2">Download CV</a>
+                <a href="MUSKAN FATHIMA-CV(2).pdf" download class="btn btn2">Download CV</a>
             </div>
         </div>
     </div>
